02_CommonCore/2_ring/2_so_long/make.log
main.c: In function ‘init’:
main.c:162:9: error: ‘main’ is normally a non-static function [-Werror=main]
  162 | int     main(void)
      |         ^~~~
main.c:183:1: error: expected declaration or statement at end of input
  183 | }
      | ^
main.c:184: error: control reaches end of non-void function [-Werror=return-type]
main.c: At top level:
main.c:162:9: error: ‘main’ defined but not used [-Werror=unused-function]
  162 | int     main(void)
      |         ^~~~
cc1: all warnings being treated as errors
make: *** [Makefile:14: main.o] Error 1
